--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,51 @@
-<!DOCTYPE html>
-<html>
+﻿<!DOCTYPE html>
+<html ng-app="sportsStore">
 <head>
-	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
-	<script type="text/javascript" src="dpd.js"></script>
+	<title>SportsStore</title>
+	<link href="css/bootstrap.css" rel="stylesheet" />
+	<link href="css/bootstrap-theme.css" rel="stylesheet" />
 </head>
-<body>
-	<h1>Welcome to Deployd!</h1>
-	<p>You've just created a Deployd app. You can add front-end files in the <code>public</code> folder.</p>
-	<p>If you're new to Deployd, have a look at the <a href="http://deployd.com/docs">Getting Started Guide</a> or <a href="http://deployd.com/docs/tutorials/hello-world.html">Hello World Tutorial<a>.</p>
+<body ng-controller="sportsStoreCtrl">
+	<div class="navbar navbar-inverse">
+		<a class="navbar-brand" href="#">SPORTS STORE</a>
+	</div>
+    <div class="alert alert-danger" 
+           ng-show="data.error">
+        Error({{data.error}}). Products 加载失败.
+    </div>
+
+	<div class="panel panel-default row" 
+        ng-controller="productListCtrl"
+        ng-hide="data.error">
+		<div class="col-xs-3">
+			<a class="btn btn-block btn-default btn-lg" 
+				ng-click="selectCategory()">All Product</a>
+			<a class="btn btn-block btn-default btn-lg" 
+				ng-repeat="item in data.products  | unique:'category' | orderBy: 'category' "
+				ng-click="selectCategory(item)"
+				ng-class="getCategoryClass(item)">{{item}}</a>
+		</div>
+		<div class="col-xs-8">
+			<div	class="well" 
+					ng-repeat="item in data.products | filter:categoryFilterFn | range:selectedPage:pageSize">
+				<h3>
+					<strong>{{item.name}}</strong>
+					<span class="pull-right label label-primary">{{item.price | currency}}</span>
+				</h3>
+				<span class="lead">{{item.description}}</span>
+			</div>
+			<div class="pull-right btn-group">
+				<a class="btn btn-default"
+					ng-repeat="index in data.products |filter:categoryFilterFn| pageCountFt:pageSize"
+					ng-click="selectPage(index+1)"
+					ng-class="getPageClass(index + 1)"
+					>{{index+1}}</a>
+			</div>
+		</div>
+	</div>
 </body>
+	<script src="jslib/angular.js"></script>
+	<script src="filters/customFilters.js"></script> 
+	<script src="controllers/sportsStore.js"></script> 
+	<script src="controllers/productListControllers.js"></script> 
 </html>
