--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,18 @@
 	<title>SportsStore</title>
 	<link href="css/bootstrap.css" rel="stylesheet" />
 	<link href="css/bootstrap-theme.css" rel="stylesheet" />
+    
+    <script src="jslib/angular.js"></script>
+    <script src="filters/customFilters.js"></script> 
+    <script src="controllers/sportsStore.js"></script> 
+    <script src="controllers/productListControllers.js"></script> 
+    <script src="components/cart.js"></script> 
+    
 </head>
 <body ng-controller="sportsStoreCtrl">
 	<div class="navbar navbar-inverse">
 		<a class="navbar-brand" href="#">SPORTS STORE</a>
+        <cart-summary />
 	</div>
     <div class="alert alert-danger" 
            ng-show="data.error">
@@ -17,8 +25,5 @@
     <ng-include src=" 'views/productList.html' "></ng-include>
 	
 </body>
-	<script src="jslib/angular.js"></script>
-	<script src="filters/customFilters.js"></script> 
-	<script src="controllers/sportsStore.js"></script> 
-	<script src="controllers/productListControllers.js"></script> 
+
 </html>
